syntax = "proto3";

package api.job.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/openmarketplaceengine/openmarketplaceengine/internal/api/job/v1";

service JobService {
  rpc ImportJob(ImportJobRequest) returns (ImportJobResponse) {}
}

message Location {
  double lat = 1;
  double lon = 2;
}

message ImportJobRequest {
  string id = 1;
  string worker_id = 2;
  google.protobuf.Timestamp created = 3;
  google.protobuf.Timestamp updated = 4;
  string state = 5;
  google.protobuf.Timestamp pickup_date = 6;
  string pickup_addr = 7;
  Location pickup_loc = 8;
  string dropoff_addr = 9;
  Location dropoff_loc = 10;
  string trip_type = 11;
  string category = 12;
}

enum JobAction {
  JOB_ACTION_UNSPECIFIED = 0;
  JOB_ACTION_CREATED = 1;
  JOB_ACTION_UPDATED = 2;
}

message ImportJobResponse {
  JobAction action = 1;
}